--- a/mock-ecosystem/site-b/package.json
+++ b/mock-ecosystem/site-b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "medstore-b",
+  "name": "apollo-pharmacy-mock",
   "version": "1.0.0",
-  "description": "Mock Medicine E-commerce Site B",
+  "description": "Mock Apollo Pharmacy website for MCP server testing",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "body-parser": "^2.2.1",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "ejs": "^3.1.9",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
